--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "zustand": "^4.5.5"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/w3c-web-serial": "^1.0.6",
